<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/msg"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/warning_icon">

                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/quit"
                    android:textSize="@dimen/title_font"
                    />


            </LinearLayout>
        </RelativeLayout>


        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exitMsg"
                android:paddingBottom="10dp"
                />


            <Button
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:background="@drawable/buttob_bg"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/QuitNo"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawablePadding = "10dp"
                android:textColor="@color/white"
                android:gravity="start|center_vertical"/>

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:background="@drawable/buttob_bg"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/QuitOK"
                android:drawablePadding = "10dp"
                android:textColor="@color/white"
                android:gravity="start|center_vertical"/>

        </LinearLayout>
    </LinearLayout>





</RelativeLayout>