<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:background="@drawable/screen_shadow">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/screen_shadow"
        />
    <LinearLayout
        android:id="@+id/customControlPanel"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/topControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:animateLayoutChanges="true"
            >


            <!--        Seek Bar and Vido Title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/videoPlayingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    style="?rowHeaderStyle"
                    android:layout_marginBottom="5dp"/>

                <com.google.android.exoplayer2.ui.DefaultTimeBar
                    android:id="@id/exo_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



            <!--       Video Duration,  Next and Pause buttons-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--                    Video Duration-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentStart="true">
                    <LinearLayout
                        android:id="@+id/videoTimingContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!--            Show video time coverage-->
                        <TextView
                            android:id="@+id/exo_position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="?rowHeaderStyle"
                            android:textStyle="normal"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:includeFontPadding="false"
                            android:textColor="@android:color/white"
                            />

                        <!--            Show video time coverage-->
                        <TextView
                            android:id="@+id/slash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="?rowHeaderStyle"
                            android:paddingStart="4dp"
                            android:text="@string/slash"
                            android:paddingEnd="4dp"
                            android:textStyle="normal"
                            android:includeFontPadding="false"
                            android:textColor="@android:color/white"
                            />

                        <!--            Show video time total duration-->
                        <TextView
                            android:id="@+id/exo_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="?rowHeaderStyle"
                            android:textStyle="normal"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:includeFontPadding="false"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/liveVideoView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:paddingStart="4dp"
                        android:paddingEnd="0dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="?rowHeaderStyle"
                            android:textStyle="normal"
                            android:text="@string/live"
                            android:textSize="17sp"
                            android:includeFontPadding="false"
                            android:textColor="@color/white"
                            />
                        <ImageView
                            android:layout_marginTop="3dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="0dp"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/circle_red"/>
                    </LinearLayout>
                </LinearLayout>

                <!--                    Pause Button -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@id/exo_play"
                        style="@style/ExoMediaButton.Play"/>

                    <ImageButton
                        android:id="@id/exo_pause"
                        style="@style/ExoMediaButton.Pause"/>

                </LinearLayout>


                <!--                    Next Video -->
                <LinearLayout
                    android:id="@+id/nextVideoCard"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:visibility="gone"
                    android:layout_alignParentEnd="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal"
                    android:layout_marginEnd="10dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    android:background="@color/transparent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingEnd="5dp"
                        android:paddingStart="0dp"
                        android:background="@color/transparent">
                        <TextView
                            android:id="@+id/playNext"
                            android:layout_gravity="start"
                            android:textAlignment="gravity"
                            style="?rowHeaderStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/other_elem_font"
                            android:text="@string/play_next"
                            android:textColor="@color/white"
                            android:paddingStart="2dp"
                            android:paddingEnd="0dp"
                            />
                        <TextView
                            android:id="@+id/nextVideoTitle"
                            android:layout_gravity="start"
                            android:textAlignment="textStart"
                            android:paddingStart="2dp"
                            android:paddingEnd="0dp"
                            android:maxLines="2"
                            android:maxLength="50"
                            android:ellipsize="end"
                            style="?rowHeaderStyle"
                            android:textSize="@dimen/other_elem_font"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:id="@+id/nextVideoThumbnail"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"/>

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:scaleType="centerInside"
                                android:adjustViewBounds="true"
                                android:layout_centerInParent="true"
                                android:background="@drawable/ic_next"/>
                            <!--                        <TextView-->
                            <!--                            android:id="@+id/nextVideoDuration"-->
                            <!--                            android:layout_alignParentEnd="true"-->
                            <!--                            android:layout_alignParentBottom="true"-->
                            <!--                            android:layout_marginBottom="5dp"-->
                            <!--                            android:layout_marginEnd="5dp"-->
                            <!--                            android:background="@color/black"-->
                            <!--                            android:padding="2dp"-->
                            <!--                            android:textAlignment="center"-->
                            <!--                            android:textSize="@dimen/smallest_elem_font"-->
                            <!--                            android:layout_width="wrap_content"-->
                            <!--                            android:layout_height="wrap_content"-->
                            <!--                            android:textColor="@color/white"-->

                            <TextView
                                android:id="@+id/nextVideoDuration"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/lb_basic_card_info_time_margin"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="5dp"
                                android:textColor="@color/white"
                                android:textSize="10sp"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:singleLine="true"
                                android:includeFontPadding="false"
                                android:lineSpacingMultiplier="0.8"
                                android:scrollY="-100dp"
                                android:scrollX="100dp"
                                android:paddingTop="-80px"
                                android:paddingLeft="2dp"
                                android:paddingRight="2dp"
                                android:paddingBottom="-50px"
                                android:background="@color/black"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentEnd="true"
                                tools:ignore="SmallSp"
                                />

                        </RelativeLayout>

                        <!--                    android:paddingLeft="5dp"-->
                        <!--                    android:paddingRight="5dp"-->
                        <!--                    android:layout_margin="5dp"-->
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/playerVideos"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>